; ModuleID = '/home/carl/AnghaBench/zfs/module/zfs/extr_dsl_dataset.c_snaplist_destroy.c'
source_filename = "/home/carl/AnghaBench/zfs/module/zfs/extr_dsl_dataset.c_snaplist_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32 }
%struct.promotenode = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_6__*, i8*)* @snaplist_destroy to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @snaplist_destroy(%struct.TYPE_6__* %0, i8* %1) #0 {
  %3 = alloca %struct.TYPE_6__*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.promotenode*, align 8
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %7 = icmp eq %struct.TYPE_6__* %6, null
  br i1 %7, label %13, label %8

8:                                                ; preds = %2
  %9 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %10 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %9, i32 0, i32 0
  %11 = call i32 @list_link_active(i32* %10)
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %14, label %13

13:                                               ; preds = %8, %2
  br label %33

14:                                               ; preds = %8
  br label %15

15:                                               ; preds = %19, %14
  %16 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %17 = call %struct.promotenode* @list_tail(%struct.TYPE_6__* %16)
  store %struct.promotenode* %17, %struct.promotenode** %5, align 8
  %18 = icmp ne %struct.promotenode* %17, null
  br i1 %18, label %19, label %30

19:                                               ; preds = %15
  %20 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %21 = load %struct.promotenode*, %struct.promotenode** %5, align 8
  %22 = call i32 @list_remove(%struct.TYPE_6__* %20, %struct.promotenode* %21)
  %23 = load %struct.promotenode*, %struct.promotenode** %5, align 8
  %24 = getelementptr inbounds %struct.promotenode, %struct.promotenode* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = load i8*, i8** %4, align 8
  %27 = call i32 @dsl_dataset_rele(i32 %25, i8* %26)
  %28 = load %struct.promotenode*, %struct.promotenode** %5, align 8
  %29 = call i32 @kmem_free(%struct.promotenode* %28, i32 4)
  br label %15

30:                                               ; preds = %15
  %31 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %32 = call i32 @list_destroy(%struct.TYPE_6__* %31)
  br label %33

33:                                               ; preds = %30, %13
  ret void
}

declare dso_local i32 @list_link_active(i32*) #1

declare dso_local %struct.promotenode* @list_tail(%struct.TYPE_6__*) #1

declare dso_local i32 @list_remove(%struct.TYPE_6__*, %struct.promotenode*) #1

declare dso_local i32 @dsl_dataset_rele(i32, i8*) #1

declare dso_local i32 @kmem_free(%struct.promotenode*, i32) #1

declare dso_local i32 @list_destroy(%struct.TYPE_6__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
